Bug 444308 - Crash on closing all documents and selecting a new color
Summary: Crash on closing all documents and selecting a new color
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.0.0-beta2
Platform: Appimage Linux
: NOR crash
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-24 05:39 UTC by tomtomtomreportingin
Modified: 2021-11-08 10:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2021-10-24 05:39:17 UTC
SUMMARY
Krita segfaults if the user closes all documents and selects a new color from the toolbar on the welcome screen.

This also occurs in beta 1 and prealpha git a6fbd9d.

This is not exactly a regression since Krita 4 didn't allow the user to select colors on the welcome screen at all.

STEPS TO REPRODUCE
1. Open a new document.
2. Close the document.
3. Reset foreground/background color or select a new color from the toolbar.

OBSERVED RESULT
Krita segfaults.

EXPECTED RESULT
New color should be selected without error.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.23.0
KDE Frameworks Version: 5.86.0
Qt Version: 5.12.11 (Appimage)
Comment 1 sh_zam 2021-10-28 15:36:50 UTC
Git commit a76de87bad537592c5e5a58348cddd6cbd8b3721 by Sharaf Zaman.
Committed on 28/10/2021 at 15:35.
Pushed by szaman into branch 'master'.

Crashfix: Selecting new color after document is closed

M  +1    -1    plugins/dockers/smallcolorselector/smallcolorselector_dock.cc

https://invent.kde.org/graphics/krita/commit/a76de87bad537592c5e5a58348cddd6cbd8b3721
Comment 2 sh_zam 2021-11-08 10:19:00 UTC
Git commit b610674b336747d5524636ade91af50a24e9d54a by Sharaf Zaman.
Committed on 08/11/2021 at 10:10.
Pushed by szaman into branch 'krita/5.0'.

Crashfix: Selecting new color after document is closed
(cherry picked from commit a76de87bad537592c5e5a58348cddd6cbd8b3721)

M  +1    -1    plugins/dockers/smallcolorselector/smallcolorselector_dock.cc

https://invent.kde.org/graphics/krita/commit/b610674b336747d5524636ade91af50a24e9d54a