Crashfix: Selecting new color after document is closed

BUG:444308
(cherry picked from commit a76de87bad537592c5e5a58348cddd6cbd8b3721)