plugins/dockers/smallcolorselector/smallcolorselector_dock.cc
@@ -65,7 +65,7 @@ void SmallColorSelectorDock::colorChangedProxy(const KoColor& c)
 
 void SmallColorSelectorDock::canvasResourceChanged(int key, const QVariant& v)
 {
-    if (key == KoCanvasResource::ForegroundColor) {
+    if (m_canvas && key == KoCanvasResource::ForegroundColor) {
         m_smallColorWidget->setColor(v.value<KoColor>());
     }
 }
